--- a/NeuralMathematics/MainWindow.xaml
+++ b/NeuralMathematics/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:NeuralMathematics"
         xmlns:math="clr-namespace:WpfMath.Controls;assembly=WpfMath"
         mc:Ignorable="d"
-        Title="Neural Mathematics Software" StateChanged="Window_StateChanged">
+        Title="Neural Mathematics Software" StateChanged="Window_StateChanged" WindowStartupLocation="CenterScreen">
     <Grid>
         <FlowDocumentScrollViewer Name="doc" Loaded="doc_Loaded" SizeChanged="doc_SizeChanged" MaxZoom="1000" MinZoom="10" Zoom="100" IsTabStop="False">
 
