--- a/Maths/ClipBox.xaml
+++ b/Maths/ClipBox.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maths"
-             mc:Ignorable="d" Loaded="w_Loaded">
+             mc:Ignorable="d" x:Name="w" Loaded="w_Loaded">
     <Grid Focusable="False" HorizontalAlignment="Left" VerticalAlignment="Top">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -24,8 +24,8 @@
                 <Image Source="sub.png"/>
             </RepeatButton>
         </DockPanel>
-        <Border ClipToBounds="True" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3">
-            <Image Name="t" Source="icones-gratuites.png" Width="300" Height="190"/>
+        <Border Name="container" ClipToBounds="True" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3">
+            <local:Tracer2D x:Name="tracer"/>
         </Border>
     </Grid>
 </UserControl>
