--- a/NeuralMathematics/Tracer.xaml
+++ b/NeuralMathematics/Tracer.xaml
@@ -5,10 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NeuralMathematics"
         xmlns:Maths="clr-namespace:Maths;assembly=Maths" x:Class="NeuralMathematics.Tracer"
-        mc:Ignorable="d" Name="w" Title="Tracer" Width="320" Height="200">
+        mc:Ignorable="d" Name="w" Title="Tracer" Width="320" Height="200" SizeToContent="WidthAndHeight">
     <Border BorderBrush="GreenYellow" BorderThickness="3">
-        <Viewbox>
-            <Maths:ClipBox/>
-        </Viewbox>
+        <Maths:ClipBox Name="c"/>
     </Border>
 </Window>
