--- a/Maths/ClipBox.xaml
+++ b/Maths/ClipBox.xaml
@@ -5,18 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maths"
              mc:Ignorable="d" x:Name="w" Loaded="w_Loaded">
-    <Grid Focusable="False" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <Grid Focusable="False">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="60"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <DockPanel Panel.ZIndex="1" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Width="50" Height="50">
+        <DockPanel Panel.ZIndex="1" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" Width="60" Height="50">
             <RepeatButton IsTabStop="False" Name="increaseZoom" Width="20" Height="20" Click="increaseZoom_Click" ClickMode="Press" Background="Transparent" BorderThickness="0" BorderBrush="Transparent">
                 <Image Source="add.png"/>
             </RepeatButton>
@@ -24,8 +22,15 @@
                 <Image Source="sub.png"/>
             </RepeatButton>
         </DockPanel>
-        <Border Name="container" ClipToBounds="True" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3">
-            <local:Tracer2D x:Name="tracer"/>
+        <Border BorderBrush="Black" BorderThickness="2" Name="container" ClipToBounds="True" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
+            <local:Tracer2D x:Name="tracer">
+                <local:Tracer2D.CacheMode>
+                    <BitmapCache RenderAtScale="0.1" EnableClearType="True" SnapsToDevicePixels="True"/>
+                </local:Tracer2D.CacheMode>
+                <local:Tracer2D.RenderTransform>
+                    <TranslateTransform X="20" Y="20"/>
+                </local:Tracer2D.RenderTransform>
+            </local:Tracer2D>
         </Border>
     </Grid>
 </UserControl>
