--- a/NeuralMathematics/Tracer.xaml
+++ b/NeuralMathematics/Tracer.xaml
@@ -4,8 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NeuralMathematics"
-        xmlns:Maths="clr-namespace:Maths;assembly=Maths" x:Class="NeuralMathematics.Tracer"
-        mc:Ignorable="d" Name="w" Title="Tracer" Width="320" Height="200" SizeToContent="WidthAndHeight">
+        xmlns:Maths="clr-namespace:Maths;assembly=Maths" x:Class="NeuralMathematics.Tracer" mc:Ignorable="d" Name="w" Title="Tracer" Width="320" Height="200">
     <Border BorderBrush="GreenYellow" BorderThickness="3">
         <Maths:ClipBox Name="c"/>
     </Border>
