--- a/Maths/ClipBox.xaml
+++ b/Maths/ClipBox.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maths"
-             mc:Ignorable="d" x:Name="w" Loaded="w_Loaded">
+             mc:Ignorable="d" x:Name="w">
     <Grid Focusable="False">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -22,15 +22,8 @@
                 <Image Source="sub.png"/>
             </RepeatButton>
         </DockPanel>
-        <Border BorderBrush="Black" BorderThickness="2" Name="container" ClipToBounds="True" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
-            <local:Tracer2D x:Name="tracer">
-                <local:Tracer2D.CacheMode>
-                    <BitmapCache RenderAtScale="0.1" EnableClearType="True" SnapsToDevicePixels="True"/>
-                </local:Tracer2D.CacheMode>
-                <local:Tracer2D.RenderTransform>
-                    <TranslateTransform X="20" Y="20"/>
-                </local:Tracer2D.RenderTransform>
-            </local:Tracer2D>
+        <Border SnapsToDevicePixels="False" BorderBrush="Black" BorderThickness="2" Name="container" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
+            <local:Tracer2D x:Name="tracer"/>
         </Border>
     </Grid>
 </UserControl>
