--- a/Maths/Tracer2D.xaml
+++ b/Maths/Tracer2D.xaml
@@ -4,5 +4,5 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Maths"
-             mc:Ignorable="d">
+             mc:Ignorable="d" HorizontalAlignment="Left" VerticalAlignment="Top" Background="Beige">
 </UserControl>
