--- a/Maths/ClipBox.xaml
+++ b/Maths/ClipBox.xaml
@@ -22,7 +22,7 @@
                 <Image Source="sub.png"/>
             </RepeatButton>
         </DockPanel>
-        <ScrollViewer Name="container" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" Background="Black" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Name="container" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" Background="Beige">
             <local:Tracer2D x:Name="tracer"/>
         </ScrollViewer>
     </Grid>
